fixed spacing issue in resource section

--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -305,6 +305,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 0%;
   }
 
   .resources-aside {
